tester/tests/compile-pass/method-call-chained.srv

fn methodtest(s: String) -> Int
    s.to_bytes().length()
end
