tester/tests/compile-fail/bad-return-type.srv

fn badret(s: String) -> Int
    if s
        return s
    end
    5
end
